[package]
name = "vulkano-mandelbrodt"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description="Vulkan-powered interactive Mandelbrodt set explorer"
readme="README.md"
repository="https://github.com/christofferaakre/vulkano-mandelbrodt"
keywords=["mandelbrodt", "fractal", "vulkan", "gpu", "window"]
categories=["mathematics", "multimedia", "rendering", "games", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.0"
image = "0.24.5"
png = "0.17.7"
vulkano = "0.32"
vulkano-shaders = "0.32"
vulkano-win = "0.32"
vulkano-util = "0.32"
winit = "0.27"
indoc = "2.0.0"
